--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.2",
+    "buffer": "^6.0.3",
     "i": "^0.3.7",
     "npm": "^10.4.0",
     "react": "^18.2.0",
